--- a/MyShop/wwwroot/assets/css/home.css
+++ b/MyShop/wwwroot/assets/css/home.css
@@ -20,7 +20,6 @@
 
 .top-sales__item {
     background: var(--white);
-    text-align: center;
     color: #000;
     padding: 15px;
     border-radius: 10px;
@@ -36,10 +35,18 @@
         -webkit-box-shadow: -4px 4px 49px 0px rgba(132,116,116,0.75);
         -moz-box-shadow: -4px 4px 49px 0px rgba(132,116,116,0.75);
     }
+    .top-sales__item .item__compare {
+        position: absolute;
+        cursor:pointer;
+    }
 
+        .top-sales__item .item__compare svg {
+            width: 25px;
+            height: 25px;
+        }
     .top-sales__item .item__image {
         width: 180px;
-        max-height: 180px;
+        height: 180px;
         margin: 0 auto;
     }
 
@@ -49,32 +56,28 @@
             object-fit: contain;
         }
 
-    .top-sales__item .item__name {
+    .top-sales__item .item__field {
+        display:flex;
+        justify-content:space-between;
         margin: 10px 0;
         font-weight: 700;
-        font-size: 18px;
+        font-size: 14px;
         flex: 1 1 auto;
+        position:relative;
     }
-
-    .top-sales__item .item__price {
-        font-size: 20px;
-        font-weight: 900;
-        position: relative;
-    }
-
-        .top-sales__item .item__price del {
-            position: absolute;
-            top: 10px;
-            left: 0;
-            font-size: 14px;
+        .top-sales__item .item__field span {
+        color: var(--green);
+        }
+        .top-sales__item .item__field .field__title {
+            color: #209097;
+        }
+        .top-sales__item  del {
+            position:absolute;
+            right: 30px;
+            top: -10px;
+            font-size: 11px;
             color: red;
         }
-
-        .top-sales__item .item__price .discount {
-            display: block;
-            margin-top: 30px;
-        }
-
 
     .top-sales__item .item__stars {
         display: flex;
@@ -127,6 +130,7 @@
 .top-sales__item .item__buttons {
     display: flex;
     align-items: center;
+    text-align:center;
     gap: 10px;
     margin-top: 10px;
 }
@@ -135,23 +139,16 @@
         width: 50%;
     }
 
-.swiper {
-    width: 100%;
-    height: 100%;
-}
-
-.swiper-wrapper {
-    height: 378px;
-}
-
-
-
+    .swiper {
+        border-radius: 10px;
+    }
 .swiper-button-next, .swiper-button-prev {
     color: var(--white);
+    opacity: .7;
 }
 
     .swiper-button-next:after, .swiper-button-prev:after {
-        font-size: 25px;
+        font-size: 15px;
         background: var(--green-secondary);
         padding: 10px;
         border-radius: 5px;
@@ -169,9 +166,7 @@
         font-size: 16px;
     }
 
-    .top-sales__item .btn-green {
-        font-size: 14px;
-    }
+  
     .top-sales__item .item__name {
         padding: 0 12px;
     }
@@ -179,10 +174,10 @@
         width: 120px;
         height: 120px;
     }
-
-    .swiper-button-next:after, .swiper-button-prev:after, .top-sales__item .item__price del {
-        font-size: 13px;
-    }
+  
+        .swiper-button-next:after, .swiper-button-prev:after, .top-sales__item .item__price del {
+            font-size: 13px;
+        }
 
     .swiper-button-next {
         right: 0 !important;
@@ -190,5 +185,29 @@
 
     .swiper-button-prev {
         left: 0 !important;
+    }
+}
+
+@media (max-width: 479px) {
+    .top-sales__item .item__field .field__title, .top-sales__item .item__field span {
+        font-size: 12px;
+    }
+    .top-sales__item del {
+        font-size: 10px;
+    }
+    .top-sales__item .item__field {
+        margin: 7px 0;
+    }
+    .top-sales__item .item__stars {
+        margin-top: 5px;
+    }
+    .top-sales__item .item__buttons {
+        gap: 4px;
+    }
+    .top-sales__item .btn-green {
+        font-size: 12px;
+    }
+    .top-sales__item {
+        padding: 10px;
     }
 }
