--- a/MyShop/Views/Home/Index.cshtml
+++ b/MyShop/Views/Home/Index.cshtml
@@ -5,6 +5,8 @@
 @section head {
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="~/assets/css/home.css" />
 }
 
@@ -96,6 +98,23 @@
 
 	</div>
 </section>
+	
+
+
+<section class="manufacturers">
+	<div class="container">
+		<div class="slider" dir="rtl">
+			<div class="img"><img src="~/assets/img/apple.png" alt="Apple"></div>
+			<div class="img"><img src="~/assets/img/samsung.png" alt="samsung"></div>
+			<div class="img"><img src="~/assets/img/nokia.png" alt="Apple"></div>
+			<div class="img"><img src="~/assets/img/huawei.png" alt="Apple"></div>
+			<div class="img"><img src="~/assets/img/realme.png" alt="Apple"></div>
+			<div class="img"><img src="~/assets/img/lenovo.png" alt="Apple"></div>
+			<div class="img"><img src="~/assets/img/oppo.png" alt="Apple"></div>
+			<div class="img"><img src="~/assets/img/xiaomi.png" alt="Apple"></div>
+		</div>
+	</div>
+</section>
 
 @* <div class="hots">
 @foreach (var item in ViewBag.Hots as List<ShortProductVM>)
@@ -141,7 +160,9 @@
 
 @section scripts {
 	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="~/assets/js/home.js"></script>
 	<script src="~/assets/js/addToBasket.js"></script>
 }
