--- a/MyShop/wwwroot/assets/css/home.css
+++ b/MyShop/wwwroot/assets/css/home.css
@@ -153,9 +153,24 @@
         padding: 10px;
         border-radius: 5px;
     }
+.manufacturers {
+    margin: 30px 0; 
+}
 
-@media (max-width: 768px) {
-    .top-sales {
+    .manufacturers .img {
+        width: 100%;
+        height: 120px;
+    }
+
+        .manufacturers .img img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+
+
+    @media (max-width: 768px) {
+        .top-sales {
         margin-bottom: 40px;
     }
     .swiper-wrapper {
