fix bug in cart basket count

--- a/MyShop/Views/Order/Create.cshtml
+++ b/MyShop/Views/Order/Create.cshtml
@@ -87,6 +87,7 @@
 								<div class="item__count count-range">
 									<button type="button" class="dec button count-dec">-</button>
 									<input type="number" class="product-value product-count" id="product-count" name="count" value="@item.Count" min="1" max="200" readonly>
+									<input type="hidden"  data-count="@item.Count"/>
 									<button type="button" class="inc button count-inc">+</button>
 								</div>
 
