add meta descriptions and keywords, add compare for category page

--- a/MyShop/Views/Home/Index.cshtml
+++ b/MyShop/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
-	ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "Mymobile - Գլխավոր";
 }
 
 @section head {
+	<meta name="description"
+		  content="Mymobile-ը ձեր հուսալի գործընկերն է բջջային տեխնոլոգիաների աշխարհում: Մենք առաջարկում ենք հեռախոսների, աքսեսուարների և պրոֆեսիոնալ վերանորոգման լայն ընտրանի: Կապվեք մեզ հետ ձեր բջջային սարքի որակյալ ապրանքների և ծառայությունների համար:" />
+	<meta name="keywords" content="հեռախոսներ, բջջային աքսեսուարներ, հեռախոսի վերանորոգում, հեռախոսների գնում, սմարթֆոնի պարագաներ, սպասարկման կենտրոն, էկրանի փոխարինում, սարքի վերանորոգում, բջջային գաջեթներ, Mymobilem, Մայ Մոբայլ" />
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
