--- a/MyShop/Views/Info/AboutUs.cshtml
+++ b/MyShop/Views/Info/AboutUs.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "AboutUs";
+	ViewData["Title"] = "Mymobile - Մեր մասին";
 }
 
 @section head {
+    	<meta name="description" content="Բարի գալուստ Mymobile՝ ձեր հուսալի գործընկերը ժամանակակից տեխնոլոգիաների աշխարհում: Մեր առաքելությունն է տրամադրել բարձրորակ սմարթֆոններ, գաջեթներ և աքսեսուարներ՝ ապահովելով որակ, հուսալիություն և հարմարավետություն: Շնորհակալություն, որ ընտրել եք մեզ!" />
+	<meta name="keywords" content="Mymobile, տեխնոլոգիաներ, բջջային լուծումներ, սմարթֆոններ, գաջեթներ, աքսեսուարներ, հեռախոսներ, որակ, հուսալիություն, առաքում, մասնագիտական աջակցություն, նորարարական արտադրանքներ" />
     <link rel="stylesheet" href="~/assets/css/about-us.css"/>
 }
 
