--- a/MyShop/Views/Info/Contact.cshtml
+++ b/MyShop/Views/Info/Contact.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Mymobile - Կոնտակտներ";
 }
 
 @section head {
+    <meta name="description" content="Կոնտակտային էջ My Mobile-ի համար: Կապվեք մեզ հետ հեռախոսով, էլ.փոստով կամ այցելեք մեր գրասենյակ:" />
     <link rel="stylesheet" href="~/assets/css/contact.css" />
     <link rel="stylesheet" href="~/assets/css/compare.css" />
 }
