--- a/MyShop/Views/Order/Create.cshtml
+++ b/MyShop/Views/Order/Create.cshtml
@@ -1,10 +1,12 @@
 ﻿@model OrderVM
 @{
-	ViewData["Title"] = "Create";
+	ViewData["Title"] = "Mymobile - Զամբյուղ";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @section head {
+	<meta name="description" content="Կառավարեք ձեր պատվերը և կատարեք գնումներ մեր առցանց խանութից: Դիտեք ապրանքները ձեր զամբյուղում, փոխեք քանակությունը և ավելացրեք նոր ապրանքներ: Արագ և հարմար»:" />
+	<meta name="keywords" content="զամբյուղ, առցանց գնումներ, առցանց խանութ, պատվերի տեղադրում, ձեր զամբյուղի կառավարում, ապրանքների ավելացում, գնումներ, զեղչեր" />
 	<link rel="stylesheet" href="~/assets/css/cart.css" />
 }
 
