--- a/MyShop/Views/Category/Details.cshtml
+++ b/MyShop/Views/Category/Details.cshtml
@@ -1,9 +1,12 @@
 ﻿@model CategoryVM
 @{
-	ViewData["Title"] = "Details";
+
+	ViewData["Title"] = $"Mymobile - {Model.Name}";
 }
 
 @section head {
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 	<link rel="stylesheet" href="~/assets/css/category.css" />
 }
@@ -50,6 +53,11 @@
 										</div>
 									</div>
 								}
+								<div class="item__compare" title="Համեմատել">
+									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+										<path stroke-linecap="round" stroke-linejoin="round" d="M7.5 21 3 16.5m0 0L7.5 12M3 16.5h13.5m0-13.5L21 7.5m0 0L16.5 12M21 7.5H7.5" />
+									</svg>
+								</div>
 								<div class="item__image">
 									<img src="~/assets/img/product/@item.ImageFile" alt="@item.Title" />
 								</div>
