--- a/MyShop/Views/Category/Details.cshtml
+++ b/MyShop/Views/Category/Details.cshtml
@@ -8,6 +8,7 @@
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+	<link rel="stylesheet" href="~/assets/css/card.css" />
 	<link rel="stylesheet" href="~/assets/css/category.css" />
 }
 
@@ -42,8 +43,8 @@
 				<div class="category__items">
 					@foreach (var item in Model.Products)
 					{
-						<div class="category__columns">
-							<form asp-area="" asp-controller="Cart" asp-action="AddToBasket" asp-route-productId="@item.Id" asp-route-FinalPrice="@item.FinalPrice" class="category__item addToCartForm">
+						<div class="category__columns card">
+							<form asp-area="" asp-controller="Cart" asp-action="AddToBasket" asp-route-productId="@item.Id" asp-route-FinalPrice="@item.FinalPrice" class="item category__item addToCartForm">
 								@if (item.Discount > 0)
 								{
 									<div class="item__discount">
@@ -61,27 +62,34 @@
 								<div class="item__image">
 									<img src="~/assets/img/product/@item.ImageFile" alt="@item.Title" />
 								</div>
-								<div class="item__info">
-									<div class="item__name">
-										@item.Title (@item.Memory GB) @item.ProdColor
-									</div>
-									<div class="item__price">
-										@if (item.Discount > 0)
-										{
-											<del class="del">@item.Price.ToString("N0") AMD</del>
-											<span class="discount">@item.FinalPrice.ToString("N0") AMD</span>
-										}
-										else
-										{
-											<span>@item.Price AMD</span>
-										}
-
-									</div>
-									<input type="hidden" value="1" name="count" />
-									<div class="item__buttons">
-										<a class="btn-green" asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Slug">Ավելին</a>
-										<button type="submit" class="btn-green addToCart add-toast">Գնել</button>
-									</div>
+								<div class="item__field">
+									<span class="field__title">Անուն:</span>
+									<span>@item.Title</span>
+								</div>
+								<div class="item__field">
+									<span class="field__title">Հիշողություն:</span>
+									<span>@item.Memory GB</span>
+								</div>
+								<div class="item__field">
+									<span class="field__title">Գույն:</span>
+									<span>@item.ProdColor</span>
+								</div>
+								<div class="item__field disc">
+									<span class="field__title">Գին:</span>
+									@if (item.Discount > 0)
+									{
+										<span class="discount">@item.FinalPrice.ToString("N0") AMD</span>
+										<del class="del">@item.Price.ToString("N0") AMD</del>
+									}
+									else
+									{
+										<span>@item.Price AMD</span>
+									}
+								</div>
+								<input type="hidden" value="1" name="count" />
+								<div class="item__buttons">
+									<a class="btn-green" asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Slug">Ավելին</a>
+									<button type="submit" class="btn-green addToCart add-toast">Գնել</button>
 								</div>
 							</form>
 						</div>
