--- a/MyShop/wwwroot/assets/css/home.css
+++ b/MyShop/wwwroot/assets/css/home.css
@@ -8,130 +8,18 @@
     }
 
 .top-sales {
-    margin-bottom: 80px;
+    margin-bottom: 55px;
 }
 
 .top-sales__title {
-    margin-bottom: 25px;
     text-align: center;
 }
-
-
-.top-sales__item {
-    background: var(--white);
-    color: #000;
-    padding: 15px;
+.top-sales .swiper {
+    padding: 25px 0;
+}
+.swiper {
     border-radius: 10px;
-    transition: all 0.3s ease;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
 }
-
-    .top-sales__item:hover {
-        box-shadow: -4px 4px 49px 0px rgba(132,116,116,0.75);
-        -webkit-box-shadow: -4px 4px 49px 0px rgba(132,116,116,0.75);
-        -moz-box-shadow: -4px 4px 49px 0px rgba(132,116,116,0.75);
-    }
-    .top-sales__item .item__image {
-        width: 180px;
-        height: 180px;
-        margin: 0 auto;
-    }
-
-        .top-sales__item .item__image img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
-
-    .top-sales__item .item__field {
-        display:flex;
-        justify-content:space-between;
-        margin: 10px 0;
-        font-weight: 700;
-        font-size: 14px;
-        flex: 1 1 auto;
-        position:relative;
-    }
-        .top-sales__item .item__field span {
-        color: var(--green);
-        }
-        .top-sales__item .item__field .field__title {
-            color: #209097;
-        }
-        .top-sales__item  del {
-            position:absolute;
-            right: 30px;
-            top: -10px;
-            font-size: 11px;
-            color: red;
-        }
-
-    .top-sales__item .item__stars {
-        display: flex;
-        justify-content: center;
-        gap: 5px;
-        margin-top: 15px;
-    }
-
-        .top-sales__item .item__stars svg {
-            width: 15px;
-            height: 15px;
-        }
-
-    .top-sales__item .item__discount {
-        position: absolute;
-        top: 0px;
-        right: 0px;
-        animation: discountAnimation 3s infinite linear;
-        z-index: 1
-    }
-
-        .top-sales__item .item__discount img {
-            width: 50px;
-            height: 50px;
-        }
-
-    .top-sales__item.discount__image {
-        position: relative;
-    }
-
-    .top-sales__item .item__discount span {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: #fff;
-        font-size: 14px;
-    }
-
-@keyframes discountAnimation {
-    0% {
-        transform: rotate(0deg)
-    }
-
-    100% {
-        transform: rotate(360deg)
-    }
-}
-
-.top-sales__item .item__buttons {
-    display: flex;
-    align-items: center;
-    text-align:center;
-    gap: 10px;
-    margin-top: 10px;
-}
-
-    .top-sales__item .item__buttons .btn-green {
-        width: 50%;
-    }
-
-    .swiper {
-        border-radius: 10px;
-    }
 .swiper-button-next, .swiper-button-prev {
     color: var(--white);
     opacity: .7;
@@ -163,23 +51,6 @@
         .top-sales {
         margin-bottom: 40px;
     }
-    .swiper-wrapper {
-        height: 310px;
-    }
-
-    .top-sales__item .item__name, .top-sales__item .item__price .discount {
-        font-size: 16px;
-    }
-
-  
-    .top-sales__item .item__name {
-        padding: 0 12px;
-    }
-    .top-sales__item .item__image {
-        width: 120px;
-        height: 120px;
-    }
-  
         .swiper-button-next:after, .swiper-button-prev:after, .top-sales__item .item__price del {
             font-size: 13px;
         }
@@ -193,26 +64,3 @@
     }
 }
 
-@media (max-width: 479px) {
-    .top-sales__item .item__field .field__title, .top-sales__item .item__field span {
-        font-size: 12px;
-    }
-    .top-sales__item del {
-        font-size: 10px;
-    }
-    .top-sales__item .item__field {
-        margin: 7px 0;
-    }
-    .top-sales__item .item__stars {
-        margin-top: 5px;
-    }
-    .top-sales__item .item__buttons {
-        gap: 4px;
-    }
-    .top-sales__item .btn-green {
-        font-size: 12px;
-    }
-    .top-sales__item {
-        padding: 10px;
-    }
-}
