--- a/MyShop/Views/Shared/_Filter.cshtml
+++ b/MyShop/Views/Shared/_Filter.cshtml
@@ -2,7 +2,7 @@
 @model FilterVM
 
 
-<form asp-area="" asp-controller="Category" asp-action="Details" asp-route-Id="@ViewBag.CategoryId">
+<form asp-area="" asp-controller="Category" asp-action="Details" asp-route-Id="@ViewBag.CategoryId" id="filter-form" data-categoryId="@ViewBag.CategoryId">
 	<div class="filter__close" style="display: none">
 		<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
 			<path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
@@ -17,7 +17,7 @@
 		<label for="minPrice" class="label">Սկսած</label>
 	</div>
 	<div class="floating-label-input">
-		<input type="number" max="@ViewBag.ProdMaxPrice" name="MaxPrice" value="@Model.MaxPrice" id="maxPrice" />
+		<input type="number"  name="MaxPrice" value="@Model.MaxPrice" id="maxPrice" />
 		<label for="maxPrice" class="label">Մինչև</label>
 	</div>
 
