Compare, vendor haarya prc

--- a/MyShop/Areas/Admin/Views/Product/AddEdit.cshtml
+++ b/MyShop/Areas/Admin/Views/Product/AddEdit.cshtml
@@ -26,6 +26,10 @@
 			<label class="label">Description</label>
 		</div>
 		<div class="floating-label-input">
+			<textarea type="text" asp-for="Vendor" class="form__input"></textarea>
+			<label class="label">Vendor</label>
+		</div>
+		<div class="floating-label-input">
 			<input type="text" asp-for="ShortDescription" class="form__input" />
 			<label class="label">Short description</label>
 		</div>
