--- a/MyShop/Views/Shared/_Filter.cshtml
+++ b/MyShop/Views/Shared/_Filter.cshtml
@@ -44,6 +44,20 @@
 
 		</div>
 	}
+	@if (ViewBag.Memories != null)
+	{
+		<div class="filter__memory filter__item">
+			<span>Vendor</span>
+			@foreach (var item in ViewBag.Vendors as List<string>)
+			{
+				<div class="">
+					<input type="checkbox" name="Vendor" id="@item" value="@item" multiple checked="@(ViewBag.Filter.GetType().GetProperty("Vendor")?.GetValue(ViewBag.Filter)?.Contains(item))">
+					<label for="@item">@item</label>
+				</div>
+			}
+
+		</div>
+	}
 	<div class="filter__color filter__item">
 		<span>Գույն</span>
 		@foreach (var item in Enum.GetValues(typeof(ProdColor)))
