--- a/MyShop/Areas/Admin/Views/Product/AddEdit.cshtml
+++ b/MyShop/Areas/Admin/Views/Product/AddEdit.cshtml
@@ -26,7 +26,7 @@
 			<label class="label">Description</label>
 		</div>
 		<div class="floating-label-input">
-			<textarea type="text" asp-for="Vendor" class="form__input"></textarea>
+			<input type="text" asp-for="Vendor" class="form__input" />
 			<label class="label">Vendor</label>
 		</div>
 		<div class="floating-label-input">
