--- a/MyShop/Views/Category/Details.cshtml
+++ b/MyShop/Views/Category/Details.cshtml
@@ -54,11 +54,11 @@
 										</div>
 									</div>
 								}
-								<div class="item__compare" title="Համեմատել">
+								<button data-prodId="@item.Id" class="item__compare add-toast-compare addToCompare" title="Համեմատել">
 									<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
 										<path stroke-linecap="round" stroke-linejoin="round" d="M7.5 21 3 16.5m0 0L7.5 12M3 16.5h13.5m0-13.5L21 7.5m0 0L16.5 12M21 7.5H7.5" />
 									</svg>
-								</div>
+								</button>
 								<div class="item__image">
 									<img src="~/assets/img/product/@item.ImageFile" alt="@item.Title" />
 								</div>
@@ -109,5 +109,6 @@
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 	<script src="~/assets/js/category.js"></script>
 	<script src="~/assets/js/addToBasket.js"></script>
+	<script src="~/assets/js/addToCompare.js"></script>
 
 }
