--- a/MyShop/Views/Shared/Components/CompareViewComponent/Default.cshtml
+++ b/MyShop/Views/Shared/Components/CompareViewComponent/Default.cshtml
@@ -5,14 +5,14 @@
 
 @if (Model > 99)
 {
-	<span class="basket__count more">
+	<span class="compare__count more">
 		99+
 	</span>
 
 }
 else
 {
-	<span class="basket__count">
+	<span class="compare__count">
 		@Model
 	</span>
 	
