change photo aboutUs

--- a/MyShop/Views/Info/AboutUs.cshtml
+++ b/MyShop/Views/Info/AboutUs.cshtml
@@ -13,7 +13,7 @@
         <div class="about-us__title title">Մեր մասին</div>
         <div class="about-us__wrapper">
             <div class="about-us__welcome">
-                <img src="~/assets/img/mymobile.jpg" alt="myMobile"/>
+                <img src="~/assets/img/mymobile.png" alt="myMobile"/>
            <div class="welcome__content">
                      <h1>
                 Բարի գալուստ <b>Mymobile՝</b> ձեր հուսալի գործընկերը ժամանակակից տեխնոլոգիաների և բջջային լուծումների աշխարհում:
